package Factory;

/**
 * @author sun
 * @title: Log
 * @projectName software_Design_Pattern_Experiment
 * @description: TODO
 * @version: 1.0
 * @date 2021/4/298:15
 */
public interface Log {
    public void writeLog(String s);
}
