package Factory;

/**
 * @author sun
 * @title: LogFactory
 * @projectName software_Design_Pattern_Experiment
 * @description: TODO
 * @version: 1.0
 * @date 2021/4/298:15
 */
public interface LogFactory {
    public Log createLog();
}
